<resources>
    <string name="account">Account</string>
    <string name="all">All</string>
    <string name="app_name">Pizza To Go</string>
    <string name="email">E-mail</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="menu">Menu</string>
    <string name="non_veg">Non-Vegetarian</string>
    <string name="or">OR</string>
    <string name="password">Password</string>
    <string name="pizza_image_content_description">Image of the pizza</string>
    <string name="remember">Remember me</string>
    <string name="searchbar_hint">Search your pizza here</string>
    <string name="signup">Sign up</string>
    <string name="veg">Vegetarian</string>
    <string name="welcome">Welcome to Pizza To Go</string>
</resources>